--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,64 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 body {
-  font-family: 'Nuosu SIL', serif;
+  font-family: "Nuosu SIL", serif;
   font-size: 1.2rem;
-  min-height: 100%; }
+  min-height: 100%;
+}
 
 .grid-container {
-  background-color: #b81597;
+  background-color: rgb(184, 21, 151);
   display: grid;
   gap: 10px;
-  grid-template: "header"  100px "navbar"  50px "main"    auto "footer"  100px; }
-  .grid-container > * {
-    box-shadow: -1px 1px 7px 0px rgba(0, 0, 0, 0.75);
-    padding: 10px;
-    text-align: center; }
+  grid-template: "header" 100px "navbar" 50px "main" auto "footer" auto;
+}
+.grid-container > * {
+  box-shadow: -1px 1px 7px 0px rgba(0, 0, 0, 0.75);
+  padding: 10px;
+  text-align: center;
+}
 
 .header {
   grid-area: header;
-  background-color: #000606; }
+  background-color: rgb(0, 6, 6);
+}
 
 .navbar {
   grid-area: navbar;
   background-color: #d137df;
   display: flex;
-  align-items: center; }
-  .navbar ul {
-    display: flex; }
-    .navbar ul li {
-      list-style: none;
-      margin-left: 36px; }
-      .navbar ul li a {
-        border: none;
-        padding: 10px 10px;
-        border-radius: 50px;
-        box-shadow: 1px 1px 30px -6px #fcf9fc;
-        background: linear-gradient(to right, #87058e, #1a022c);
-        text-decoration: none;
-        font-size: 16px;
-        color: aliceblue;
-        text-transform: uppercase; }
-        .navbar ul li a:hover {
-          border: none;
-          padding: 10px 10px;
-          border-radius: 50px;
-          box-shadow: 1px 1px 30px -6px #a4318f;
-          background: linear-gradient(to right, #e8e1e9, #140122);
-          cursor: pointer; }
+  align-items: center;
+}
+.navbar ul {
+  display: flex;
+}
+.navbar ul li {
+  list-style: none;
+  margin-left: 36px;
+}
+.navbar ul li a {
+  border: none;
+  padding: 10px 10px;
+  border-radius: 50px;
+  box-shadow: 1px 1px 30px -6px #fcf9fc;
+  background: linear-gradient(to right, rgb(135, 5, 142), rgb(26, 2, 44));
+  text-decoration: none;
+  font-size: 16px;
+  color: aliceblue;
+  text-transform: uppercase;
+}
+.navbar ul li a:hover {
+  border: none;
+  padding: 10px 10px;
+  border-radius: 50px;
+  box-shadow: 1px 1px 30px -6px #a4318f;
+  background: linear-gradient(to right, rgb(232, 225, 233), rgb(20, 1, 34));
+  cursor: pointer;
+}
 
 .main {
   grid-area: main;
@@ -57,158 +67,187 @@ body {
   height: 100%;
   margin: auto;
   display: flex;
-  align-items: center; }
-  .main h1 {
-    text-align: center;
-    font-size: 36px;
-    font-weight: 600px; }
-  .main h2 {
-    text-align: center;
-    font-size: 25px;
-    font-weight: 500px; }
-  .main p {
-    font-size: 18px;
-    margin-top: 5px;
-    text-align: justify;
-    padding: 30px; }
-  .main ul {
-    display: inline; }
-    .main ul li {
-      list-style: disc;
-      margin-left: 50px;
-      margin-top: 10px; }
-      .main ul li p {
-        font-size: 16px;
-        margin-top: -40px; }
-
-.footer {
-  grid-area: footer;
+  align-items: center;
+}
+.main h1 {
   text-align: center;
+  font-size: 36px;
+  font-weight: 600px;
+}
+.main h2 {
+  text-align: center;
+  font-size: 25px;
+  font-weight: 500px;
+}
+.main p {
+  font-size: 18px;
+  margin-top: 5px;
+  text-align: justify;
   padding: 30px;
-  background-color: #090101;
-  color: #f1e9e9;
-  text-decoration: none; }
+}
+.main ul {
+  display: inline;
+}
+.main ul li {
+  list-style: disc;
+  margin-left: 50px;
+  margin-top: 10px;
+}
+.main ul li p {
+  font-size: 16px;
+  margin-top: -40px;
+}
 
 /*------------------responsive----------------------------*/
 @media (max-width: 900px) {
   .grid-container {
-    background-color: #b81597;
-    grid-template: "header  header header"  100px "navbar  navbar navbar" 50px "main    main   main" auto "footer  footer footer"  100px / 200px    auto   200px; }
+    background-color: rgb(184, 21, 151);
+    grid-template: "header  header header" 100px "navbar  navbar navbar" 50px "main    main   main" auto "footer  footer footer" 100px/200px auto 200px;
+  }
   .navbar {
     display: flex;
-    justify-content: space-around; }
+    justify-content: space-around;
+  }
   .main {
-    max-width: 800px; }
-    .main img {
-      width: 500px;
-      justify-content: center;
-      margin-bottom: 20px; } }
-
+    max-width: 800px;
+  }
+  .main img {
+    width: 500px;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+}
 @media (max-width: 720px) {
   .grid-container {
-    background-color: #b81597;
-    grid-template: "header  header header" 100px "navbar  navbar navbar" 50px "main    main   main"   auto "footer  footer footer" 100px / 140px    auto    200px; }
+    background-color: rgb(184, 21, 151);
+    grid-template: "header  header header" 100px "navbar  navbar navbar" 50px "main    main   main" auto "footer  footer footer" 100px/140px auto 200px;
+  }
   .navbar {
     display: flex;
-    justify-content: space-around; }
+    justify-content: space-around;
+  }
   .main {
-    max-width: 600px; }
-    .main img {
-      width: 300px;
-      justify-content: center;
-      margin-bottom: 10px; } }
+    max-width: 600px;
+  }
+  .main img {
+    width: 300px;
+    justify-content: center;
+    margin-bottom: 10px;
+  }
+}
+#selector:hover {
+  border: none;
+  padding: 10px 40px;
+  border-radius: 50px;
+}
 
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 header {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   width: 100%;
   height: 100px;
   margin-top: 0px;
   position: fixed;
   z-index: 1;
-  background-color: #000606;
-  padding: 40px; }
+  background-color: rgb(0, 6, 6);
+  padding: 40px;
+}
 
 .conteiner-menu {
   max-width: 1200px;
   height: 100%;
   margin: auto;
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+}
 
 .logo {
   height: 100%;
   display: flex;
-  align-items: center; }
-  .logo img {
-    width: 100px; }
+  align-items: center;
+}
+.logo img {
+  width: 100px;
+}
 
 .menu {
   display: flex;
-  align-items: center; }
-  .menu ul {
-    display: flex; }
-    .menu ul li {
-      list-style: none;
-      margin-left: 36px; }
-      .menu ul li a {
-        text-decoration: none;
-        font-size: 16px;
-        color: aliceblue;
-        text-transform: uppercase; }
+  align-items: center;
+}
+.menu ul {
+  display: flex;
+}
+.menu ul li {
+  list-style: none;
+  margin-left: 36px;
+}
+.menu ul li a {
+  text-decoration: none;
+  font-size: 16px;
+  color: aliceblue;
+  text-transform: uppercase;
+}
 
 #selector:hover {
-  border: none;
-  padding: 10px 40px;
-  border-radius: 50px;
   box-shadow: 1px 1px 30px -6px #a4318f;
-  background: linear-gradient(to right, #87058e, #1a022c);
+  background: linear-gradient(to right, rgb(135, 5, 142), rgb(26, 2, 44));
   cursor: pointer;
-  transition: 0.7s; }
+  transition: 0.7s;
+}
 
 .menu nav img, .menu #btn_menu {
-  display: none; }
+  display: none;
+}
 
 @media screen and (max-width: 720px) {
   .menu nav {
     position: fixed;
     top: 0;
     right: -250px;
-    background: #010009;
+    background: rgb(1, 0, 9);
     width: 250px;
     height: 100vh;
     padding: 40px;
-    z-index: 1; }
+    z-index: 1;
+  }
   .menu ul {
     flex-direction: column;
-    margin-top: 40px; }
-    .menu ul li {
-      margin-top: 30px;
-      margin-left: 0; }
-      .menu ul li a {
-        color: #bebebe; }
+    margin-top: 40px;
+  }
+  .menu ul li {
+    margin-top: 30px;
+    margin-left: 0;
+  }
+  .menu ul li a {
+    color: #bebebe;
+  }
   #selector {
     border: none;
     padding: 10px 40px;
     border-radius: 50px;
     box-shadow: 1px 1px 30px -6px #a4318f;
-    background: linear-gradient(to right, #87058e, #1a022c);
-    cursor: pointer; }
+    background: linear-gradient(to right, rgb(135, 5, 142), rgb(26, 2, 44));
+    cursor: pointer;
+  }
   .menu ul li a:hover {
-    color: #020000; }
+    color: #020000;
+  }
   #selector:hover {
     border: none;
     padding: 10px 40px;
     border-radius: 50px;
     box-shadow: 1px 1px 30px -6px #ecd5e7;
-    background: linear-gradient(to right, #87058e, #1a022c); }
+    background: linear-gradient(to right, rgb(135, 5, 142), rgb(26, 2, 44));
+  }
   .menu nav img {
     width: 100px;
-    display: block; }
+    display: block;
+  }
   #back_menu {
     position: fixed;
     top: 0;
@@ -216,7 +255,8 @@ header {
     width: 100%;
     height: 100vh;
     background: rgba(0, 0, 0, 0.5);
-    display: none; }
+    display: none;
+  }
   .menu #btn_menu {
     display: flex;
     align-items: center;
@@ -227,8 +267,107 @@ header {
     font-size: 24px;
     border-radius: 50px;
     cursor: pointer;
-    box-shadow: 1px 1px 30px -6px #d0f0d2; }
-    .menu #btn_menu:hover {
-      box-shadow: 1px 1px 30px -6px #a4318f;
-      background: linear-gradient(to right, #87058e, #1a022c);
-      transition: all 300ms; } }
+    box-shadow: 1px 1px 30px -6px #d0f0d2;
+  }
+  .menu #btn_menu:hover {
+    box-shadow: 1px 1px 30px -6px #a4318f;
+    background: linear-gradient(to right, rgb(135, 5, 142), rgb(26, 2, 44));
+    transition: all 300ms;
+  }
+}
+footer {
+  grid-area: footer;
+  position: relative;
+  width: 100%;
+  height: auto;
+  padding: 50px 80px;
+  background: #111;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+footer .container-footer {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+footer .container-footer .redes {
+  margin-right: 58px;
+}
+footer .container-footer .redes .social {
+  width: 40%;
+}
+footer .container-footer h2 {
+  position: relative;
+  color: #fbf8f8;
+  font-weight: 500;
+  margin-bottom: 15px;
+}
+footer .container-footer h2::before {
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  width: 50px;
+  height: 2px;
+  background: #a4318f;
+}
+
+.sci {
+  margin-top: 20px;
+  display: flex;
+}
+.sci li {
+  list-style: none;
+}
+.sci li a {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  background: #222;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+  text-decoration: none;
+  border-radius: 4px;
+}
+.sci li a:hover {
+  background: #a4318f;
+}
+.sci li a .fab {
+  color: #fff;
+  font-size: 20px;
+}
+
+.SiteMap {
+  position: relative;
+  width: 25%;
+}
+.SiteMap ul li {
+  list-style: none;
+}
+.SiteMap ul li a {
+  color: #999;
+  text-decoration: none;
+  margin-bottom: 10px;
+  display: inline-block;
+}
+.SiteMap ul li a:hover {
+  color: #fff;
+}
+
+.copy {
+  width: 100%;
+  background: #181818;
+  padding: 8px 100px;
+  text-align: center;
+  color: #999;
+}
+
+.color {
+  color: blue;
+}
+
+/*# sourceMappingURL=style.css.map */
