--- a/scss/component/_header.scss
+++ b/scss/component/_header.scss
@@ -1,3 +1,4 @@
+@import '../base/extends';
 * {
     box-sizing: border-box;
     margin: 0;
@@ -55,9 +56,7 @@ header {
   }
   
   #selector:hover {
-    border: none;
-    padding: 10px 40px;
-    border-radius: 50px;
+    @extend %hover;
     box-shadow: 1px 1px 30px -6px #a4318f;
     background: linear-gradient(to right, rgb(135, 5, 142), rgb(26, 2, 44));
     cursor: pointer;
