--- a/scss/component/_header.scss
+++ b/scss/component/_header.scss
@@ -1,4 +1,5 @@
 @import '../base/extends';
+@import url("https://fonts.googleapis.com/css2?family=Public+Sans&display=swap");
 * {
     box-sizing: border-box;
     margin: 0;
