--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Public+Sans&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -5,7 +7,7 @@
 }
 
 body {
-  font-family: "Nuosu SIL", serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.2rem;
   min-height: 100%;
 }
@@ -102,7 +104,7 @@ body {
 @media (max-width: 900px) {
   .grid-container {
     background-color: rgb(184, 21, 151);
-    grid-template: "header  header header" 100px "navbar  navbar navbar" 50px "main    main   main" auto "footer  footer footer" 100px/200px auto 200px;
+    grid-template: "header  header header" 100px "navbar  navbar navbar" 50px "main    main   main" auto "footer  footer footer" 300px/200px auto 200px;
   }
   .navbar {
     display: flex;
@@ -120,7 +122,7 @@ body {
 @media (max-width: 720px) {
   .grid-container {
     background-color: rgb(184, 21, 151);
-    grid-template: "header  header header" 100px "navbar  navbar navbar" 50px "main    main   main" auto "footer  footer footer" 100px/140px auto 200px;
+    grid-template: "header  header header" 100px "navbar  navbar navbar" 50px "main    main   main" auto "footer  footer footer" 400px/140px auto 200px;
   }
   .navbar {
     display: flex;
