--- a/css/style2.css
+++ b/css/style2.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Public+Sans&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Nuosu+SIL&display=swap');
+
 
 * {
   box-sizing: border-box;
@@ -601,7 +601,7 @@ input[type="checkbox"] {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 }
 
 a{
@@ -634,8 +634,8 @@ a{
 }
 
 figure {
-	width: 300px;
-	height: 350px;
+	width: 400px;
+	height: 300px;
 	margin:0;
 	position: relative;
   transition: all ease .5s;
